@@ -1,3 +1,4 @@
+* Allow cancel failed milestones and add cancel state to milestones group
 * Allow to configure sale lines/remainder milestones on confirm sale
 * Fix invoice duplication
 * Only relate milestone with sale lines of type line
